--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=consumir-api
 server.servlet.context-path=/consumir
 server.port=8031
-
-spring.datasource.url=jdbc:mysql://localhost/db_book?serverTimezone=America/Lima&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_consumir?serverTimezone=America/Lima&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
