--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=consumir-api
-server.servlet.context-path=/consumir
-server.port=8031
+server.servlet.context-path=/consumir-webclient
+server.port=8032
 spring.datasource.url=jdbc:mysql://localhost/db_consumir?serverTimezone=America/Lima&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
